# Uta-Homepage

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
public/static/js/: pagination.js  tech-circles.js  theme-toggle.js
static/css/: style.css
static/js/: pagination.js
templates/: base.html  error.html  index.html
templates/admin/: base.html  dashboard.html  login.html
templates/admin/projects/: form.html
tests/: conftest.py  test_app.py
