[project]
name = "uta-home"
version = "1.0.0"
description = "Portfolio website built with Fenrir Framework"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".github/*",
    "api/*",
    "public/*",
    "AGENTS.md",
    "*.pyc",
    "__pycache__/*",
    "htmlcov/*",
    ".coverage",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
show_missing = true
fail_under = 95

[tool.vercel]
entrypoint = "api/index.py:app"
